<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lj.cameracontroller.view.TitleView
        android:id="@+id/tv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImage="@mipmap/back_png"></com.lj.cameracontroller.view.TitleView>

    <RelativeLayout
        android:id="@+id/IPCPlayLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#2f2f2f">

        <SurfaceView
            android:id="@+id/IPCPlaySurFaceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:id="@+id/IPCPlayPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="@dimen/btn_height"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/ipc_control_tv_preset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_preset"
            android:textColor="@color/secondary_color_ffffff"
            android:background="@drawable/ipc_item_bg"
            android:textSize="@dimen/secondary_text" />

        <TextView
            android:id="@+id/ipc_control_tv_sound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_sound"
            android:background="@drawable/ipc_item_bg"
            android:textColor="@color/secondary_color_ffffff"
            android:textSize="@dimen/secondary_text" />

        <TextView
            android:id="@+id/ipc_control_tv_resolution"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_fluent"
            android:background="@drawable/ipc_item_bg"
            android:textColor="@color/secondary_color_ffffff"
            android:textSize="@dimen/secondary_text" />

        <TextView
            android:id="@+id/ipc_control_tv_updown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_updown"
            android:background="@drawable/ipc_item_bg"
            android:textColor="@color/secondary_color_ffffff"
            android:textSize="@dimen/secondary_text" />

        <TextView
            android:id="@+id/ipc_control_tv_photograph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_photograph"
            android:background="@drawable/ipc_item_bg"
            android:textColor="@color/secondary_color_ffffff"
            android:textSize="@dimen/secondary_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ipc_ptz_control"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3.5" />

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginRight="5dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/btnbg">
            </FrameLayout>
            <TextView
                android:id="@+id/tv_btn_left"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:background="@drawable/left_btn_bg"
                android:textColor="@color/secondary_color_097ba5" />

            <TextView
                android:id="@+id/tv_btn_right"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/right_btn_bg"
                android:textColor="@color/secondary_color_097ba5" />


            <TextView
                android:id="@+id/tv_btn_down"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/down_btn_bg"
                android:textColor="@color/secondary_color_097ba5" />

            <TextView
                android:id="@+id/tv_btn_up"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/up_btn_bg"
                android:textColor="@color/secondary_color_097ba5"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingRight="5dp">

                <ImageView
                    android:id="@+id/ipc_control_tv_zoomadd"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="right"
                    android:text="@string/str_add"
                    android:src="@drawable/add_btn_bg"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/main_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_zoom"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/secondary_text" />

                <ImageView
                    android:id="@+id/ipc_control_tv_zoomreduce"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="left"
                    android:src="@drawable/jian_btn_bg"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/main_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:id="@+id/ipc_control_tv_focusingadd"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="right"
                    android:src="@drawable/add_btn_bg"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/main_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_focusing"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/secondary_text" />

                <ImageView
                    android:id="@+id/ipc_control_tv_focusingreduce"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="left"
                    android:text="@string/str_reduce"
                    android:src="@drawable/jian_btn_bg"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/main_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:id="@+id/ipc_control_tv_irisadd"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="right"
                    android:text="@string/str_add"
                    android:src="@drawable/add_btn_bg"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/main_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_iris"
                    android:textColor="@color/secondary_color_097ba5"
                    android:textSize="@dimen/secondary_text" />

                <ImageView
                    android:id="@+id/ipc_control_tv_irisreduce"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="left"
                    android:text="@string/str_reduce"
                    android:textColor="@color/secondary_color_097ba5"
                    android:src="@drawable/jian_btn_bg"
                    android:textSize="@dimen/main_title" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>