<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroud_color"
    android:orientation="vertical">
<com.lj.cameracontroller.view.TitleView
    android:id="@+id/tv_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:leftImageVisible="false">

</com.lj.cameracontroller.view.TitleView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/str_zhinengguanlixitong"
            android:textColor="@color/secondary_color_333333"
            android:textSize="@dimen/important_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/secondary_color_cccccc"
            android:paddingBottom="6dp">

            <EditText
                android:id="@+id/et_user_login_user_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="账号"
                android:maxLines="1"
                android:textColor="@color/secondary_color_333333"
                android:textColorHint="@color/secondary_color_666666"
                android:textSize="@dimen/majority_text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/secondary_color_cccccc"
            android:paddingBottom="6dp">

            <EditText
                android:id="@+id/et_user_login_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="密码"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/secondary_color_333333"
                android:textColorHint="@color/secondary_color_666666"
                android:textSize="@dimen/majority_text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/but_user_login"
            style="?LargeFilletButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_fillet_button_height"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|right"
            android:paddingRight="40dp">

            <CheckBox
                android:id="@+id/remindPwd"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:text="@string/str_forgetpwd_"
                android:textColor="#ADBABD"
                android:textSize="@dimen/secondary_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>